--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -23,9 +23,9 @@ body {
 }
 
 header {
-  width:260px;
-  float:left;
-  position:fixed;
+  width: 260px;
+  float: left;
+  position: fixed;
 }
 
 #content {
@@ -46,7 +46,6 @@ footer {
   body {
     width: auto;
     padding: 0 3%;
-    padding-bottom: 25px;
   }
 
   header, #content, footer {
@@ -76,7 +75,6 @@ footer {
 
 @media print {
   body {
-    padding: 0.4in;
     font-size: 12pt;
   }
   a[href]:after {
@@ -85,12 +83,6 @@ footer {
 }
 
 
-
-/* * { */
-/*   -webkit-box-sizing: border-box; /\* Safari/Chrome, other WebKit *\/ */
-/*   -moz-box-sizing: border-box;    /\* Firefox, other Gecko *\/ */
-/*   box-sizing: border-box;         /\* Opera/IE 8+ *\/ */
-/* } */
 
 .none {
   display: none !important;             /*override more specific selectors*/
@@ -163,6 +155,7 @@ h4 { font-size:14px; line-height:14px; }
 
 h2 {                                    /*any top heading*/
   margin-top: 0;
+  margin-bottom: 1em;
 }
 .post-header h3 {                       /*and heading in index list item*/
   margin-top: 0;
